@@ -601,6 +601,7 @@
             this.size_limit = null;
             this.limit = attributes.limit || Sao.config.limit;
             this.offset = 0;
+            this.order = attributes.order;
             var access = Sao.common.MODELACCESS.get(model_name);
             if (!(access.write || access.create)) {
                 this.attributes.readonly = true;
@@ -751,7 +752,8 @@
             }.bind(this);
             return _switch();
         },
-        search_filter: function(search_string) {
+        search_filter: function(search_string, only_ids) {
+            only_ids = only_ids || false;
             if (this.context_screen) {
                 if (this.context_screen_prm.state() == 'pending') {
                     return this.context_screen_prm.then(function() {
@@ -800,9 +802,12 @@
             }
 
             var grp_prm = this.model.find(domain, this.offset, this.limit,
-                    this.attributes.order, this.context);
-            var count_prm = this.model.execute('search_count', [domain],
-                    this.context);
+                    this.order, this.context);
+            var count_prm = jQuery.when(this.search_count);
+            if (!only_ids) {
+                count_prm = this.model.execute('search_count', [domain],
+                        this.context);
+            }
             count_prm.done(function(count) {
                 this.search_count = count;
             }.bind(this));
